# ble-heart-rate

./: .gitignore  .npmignore  .npmrc  Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml  test.mjs
.github/workflows/: CI.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib-class.rs  lib.rs
