[package]
edition = "2021"
name = "napi-rs_ble-heart-rate"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.0.0-alpha.20", features = ["async"] }
napi-derive = "3.0.0-alpha.19"
futures = "0.3.31"
btleplug = "0.11.6"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
